--- a/WebGUI/html/widgets/picture.html
+++ b/WebGUI/html/widgets/picture.html
@@ -18,7 +18,7 @@
 
 		<script>
 
-			var parameters_ = {"class": "", "upload_image": "picture-icon.png"};
+			var parameters_ = {"class": "", "upload_image": "picture-icon.png", "inner_map_html": ""};
 			var IMAGE_PATH = "/WebPath/UserWebPath/ControlsDashboardData/private/";
 			//functions:
 			//init()
@@ -39,7 +39,8 @@
 			function drawWidget(widget, parameters)
 			{
 				if (parameters) parameters_ = parameters;
-				document.getElementById("display").innerHTML = "<img id='img1' src='" + IMAGE_PATH + parameters_["upload_image"] + "' title='" + parameters_["upload_image"] + "'></img>";
+				document.getElementById("display").innerHTML = "<img id='img1' src='" + IMAGE_PATH + parameters_["upload_image"] + "' title='" + parameters_["upload_image"] + "' usemap='#imgmap'></img>";
+				document.getElementById("display").innerHTML += "<map name='#imgmap'>" + parameters_["inner_map_html"] + "</map>";
 				document.getElementById("img1").style.width = (parseInt(window.innerWidth) - 16) + "px";
 				document.getElementById("img1").style.height = (parseInt(window.innerHeight) - 16) + "px";
 			}
