Better handling of login notify in State Machine and System Status webapps

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -414,7 +414,10 @@
 			    	Debug.log("Handling login notification...");
 			    	Debug.closeErrorPop();
 			    	//get state machine from server
-					refreshFSM();	
+					DesktopContent.XMLHttpRequest(
+						"Request?RequestType=getStateMachine" + 
+						"&fsmName=" + _fsmName, "", 
+						smRequestHandler);		
 			    } //end login notify handler
 				
 				_blackout = document.getElementById("blackout");
